applications/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
